# qrlan-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_all.sh  create_release.sh  install.ps1  install.sh  qrlan.manifest  qrlan.rc
resource/layouts/: standard.tex
resource/translation/: translation.qrlan
scripts/: build_all.sh  create_release.sh  homebrew_release.sh  install.ps1  install.sh
src/: cli.rs  main.rs  qr_generator.rs  update.rs  wifi_utils.rs
src/wifi_utils/: linux.rs  macos.rs  windows.rs
