[package]
name = "qrlan"
version = "1.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
qrcode = { version = "0.12", features = ["image"] }
image = "0.23"
genpdf = { version = "0.2.0", features = ["images"] }
dirs = "5.0"
heck = "0.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qr2term = "0.3.0"
svg = "0.13"

[build-dependencies]
embed-resource = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
